--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb+srv://Alshaba:Akram1453@cluster0.dgoi1kc.mongodb.net/portfolio_app?retryWrites=true&w=majority
 JWT_SECRET=your_jwt_secret_key
 PORT=5000
+CLIENT_URL=http://localhost:5173/
